[package]
name = "thubookrs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["cargo"] }
image = "0.25.8"
lopdf = { version = "0.38.0", features = ["async", "embed_image", "image", "tokio"] }
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["cookies", "json"] }
reqwest_cookie_store = "0.9.0"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.16"

[profile.release]
lto = true
codegen-units = 1
